--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+blinker==1.9.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.2
@@ -18,21 +20,22 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
-distlib==0.3.9
 executing==2.2.0
 fastjsonschema==2.21.1
-filelock==3.18.0
+Flask==3.1.1
 fonttools==4.58.2
 fqdn==1.5.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+imbalanced-learn==0.13.0
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.7
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.1
@@ -52,6 +55,7 @@ jupyterlab==4.4.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
+kaggle==1.7.4.5
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.3
@@ -61,6 +65,7 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+nltk==3.9.1
 notebook==7.4.3
 notebook_shim==0.2.4
 numpy==2.3.0
@@ -73,6 +78,7 @@ pillow==11.2.1
 platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
+protobuf==6.31.1
 psutil==7.0.0
 pure_eval==0.2.3
 pycparser==2.22
@@ -80,37 +86,42 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
+python-slugify==8.0.4
 pytz==2025.2
 pywin32==310
 pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.25.1
-scikit-learn==1.7.0
-scipy==1.15.3
+scikit-learn==1.6.1
+scipy==1.16.1
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
+sklearn-compat==0.1.3
 sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
 terminado==0.18.1
+text-unidecode==1.3
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.14.0
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.4.0
-virtualenv==20.31.2
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 widgetsnbextension==4.0.14
